# great_reads

./: .gitignore  README.md  permissions.json  pyproject.toml  requirements.txt  testdr.py
app/: main.py  permissions.json
app/config/: settings.py
app/core/: authentication.py  enums.py  middlewares.py  routers.py  security.py  settings.py  startups.py  types.py  utils.py
app/endpoints/: books.py
app/endpoints/v1/: authentication.py  books.py  registration.py  users.py
app/handlers/: databases.py  mongo.py
app/models/: books.py  users.py
app/repositories/: books.py  security.py  users.py
app/schemas/: authentication.py  books.py  registration.py  users.py
app/utils/: singleton.py
